--- a/templates/partials/accounts/criar_usuario.html
+++ b/templates/partials/accounts/criar_usuario.html
@@ -49,6 +49,15 @@
             {% endif %}
           </div>
 
+          <!-- 📞 WhatsApp -->
+          <div class="mb-3">
+            {{ form.whatsapp.label_tag }}
+            {{ form.whatsapp|attr:"autocomplete:off" }}
+            {% if form.whatsapp.errors %}
+              <div class="text-danger small">{{ form.whatsapp.errors.0 }}</div>
+            {% endif %}
+          </div>
+
           <!-- 🔐 Senha -->
           <div class="mb-3">
             {{ form.password1.label_tag }}
@@ -72,11 +81,13 @@
     {{ form.grupo.label_tag }}
     {{ form.grupo }}
 </div>
-<div class="form-check mb-3">
-    {{ form.is_active }}
+<div class="mb-3 d-flex align-items-center">
     <label class="form-check-label" for="{{ form.is_active.id_for_label }}">
         {{ form.is_active.label }}
     </label>
+    <div class="ms-2">
+        {{ form.is_active }}
+    </div>
 </div>
             {% if form.grupo.errors %}
               <div class="text-danger small">{{ form.grupo.errors.0 }}</div>
