--- a/templates/partials/accounts/lista_usuarios.html
+++ b/templates/partials/accounts/lista_usuarios.html
@@ -11,7 +11,7 @@
        data-seletor-checkbox=".check-usuario">
 
     <!-- 🔔 Mensagens instantâneas -->
-    <div id="mensagens"></div>
+    
 
     <div class="row justify-content-center">
       <div class="col-md-12 col-lg-10">
@@ -49,6 +49,7 @@
                                 <th scope="col">WhatsApp</th>
                                 <th scope="col">Grupos</th>
                                 <th scope="col" class="text-center">Ativo</th>
+                                <th scope="col" class="text-center">Ações</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -74,6 +75,11 @@
                                     {% else %}
                                         <span class="badge bg-danger">Inativo</span>
                                     {% endif %}
+                                </td>
+                                <td class="text-center">
+                                    <a href="{% url 'accounts:gerenciar_permissoes_usuario' user_id=usuario.id %}" class="btn btn-sm btn-outline-primary ajax-link" title="Gerenciar Permissões">
+                                        <i class="bi bi-shield-lock"></i>
+                                    </a>
                                 </td>
                             </tr>
                             {% empty %}
