--- a/templates/partials/nova_empresa/lista_categorias.html
+++ b/templates/partials/nova_empresa/lista_categorias.html
@@ -1,6 +1,7 @@
 {% include 'partials/mensagens.html' %}
 
 <div id="identificador-tela" 
+     data-tela="lista_categorias"
      data-entidade-singular="categoria" 
      data-entidade-plural="categorias" 
      data-url-editar="/empresas/categorias/"
