Importação XML Redefinido, Corrigido

--- a/templates/partials/accounts/confirmar_exclusao_grupo.html
+++ b/templates/partials/accounts/confirmar_exclusao_grupo.html
@@ -1,3 +1,4 @@
+<main id="main-content">
 {% if perms.auth.delete_group %}
 {% load static %}
 
@@ -37,3 +38,4 @@
   Você não tem permissão para acessar esta funcionalidade.
 </div>
 {% endif %}
+</main>
