--- a/templates/partials/accounts/gerenciar_permissoes.html
+++ b/templates/partials/accounts/gerenciar_permissoes.html
@@ -1,3 +1,4 @@
+<main id="main-content">
 {% load static %}
 {% load custom_tags %}
 
@@ -50,3 +51,4 @@
     </div>
 </div>
 <script src="{% static 'js/permissions.js' %}"></script>
+</main>
