--- a/templates/partials/accounts/login.html
+++ b/templates/partials/accounts/login.html
@@ -1,3 +1,4 @@
+<main id="main-content">
 {% load static %}
 
 <div class="container d-flex justify-content-center align-items-center min-vh-100">
@@ -38,4 +39,4 @@
     </form>
   </div>
 </div>
-
+</main>
