--- a/templates/partials/nova_empresa/lista_categorias.html
+++ b/templates/partials/nova_empresa/lista_categorias.html
@@ -15,7 +15,7 @@
     <h2 class="mb-4">Categorias de Empresas</h2>
 
     <div class="d-flex justify-content-end gap-2 mb-3">
-      <a href="{% url 'empresas:cadastrar_categoria' %}" class="btn btn-success ajax-link">
+      <a href="{% url 'empresas:cadastrar_categoria_avancada_new' %}" class="btn btn-success ajax-link">
         <i class="bi bi-plus-circle"></i> Nova
       </a>
       <button id="btn-editar" class="btn btn-primary" disabled>
