--- a/templates/partials/produtos/cadastrar_produto.html
+++ b/templates/partials/produtos/cadastrar_produto.html
@@ -1,3 +1,4 @@
+<main id="main-content">
 {% load static widget_tweaks %}
 
 <!-- ✅ Formulário de Cadastro de Produto - AJAX | Padrão OneTech -->
@@ -116,3 +117,4 @@
     }
   });
 </script>
+</main>
