--- a/templates/partials/produtos/lista_categorias.html
+++ b/templates/partials/produtos/lista_categorias.html
@@ -6,7 +6,7 @@
   <div id="identificador-tela" 
        data-entidade-singular="categoria"
        data-entidade-plural="categorias"
-       data-url-editar="/produtos/categorias/editar/"
+       data-url-editar="/produtos/categorias/"
        data-url-excluir="/produtos/categorias/excluir-multiplas/"
        data-seletor-checkbox=".check-categoria">
   </div>
