--- a/templates/partials/produtos/lista_produtos.html
+++ b/templates/partials/produtos/lista_produtos.html
@@ -12,7 +12,7 @@
        data-tela="lista_produtos"
        data-entidade-singular="produto"
        data-entidade-plural="produtos"
-       data-url-editar="{% url 'produto:editar_produto' pk=0 %}"
+       data-url-editar="/produtos/"
        data-url-excluir="{% url 'produto:excluir_produto_multiplo' %}"
        data-seletor-checkbox=".check-produto"></div>
 
