--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -9,7 +9,7 @@
     {% if error %}
       <p style="color:red;">{{ error }}</p>
     {% endif %}
-    <form method="POST">
+    <form method="POST" id="login-form">
         {% csrf_token %}
         <label>Usuário:</label><br>
         <input type="text" name="username" required><br><br>
