--- a/templates/partials/accounts/signup.html
+++ b/templates/partials/accounts/signup.html
@@ -1,3 +1,4 @@
+<main id="main-content">
 {% if perms.accounts.add_user %}
 {% load static %}
 {% load widget_tweaks %}
@@ -64,3 +65,4 @@
   Você não tem permissão para acessar esta funcionalidade.
 </div>
 {% endif %}
+</main>
