--- a/templates/partials/nova_empresa/cadastrar_categoria.html
+++ b/templates/partials/nova_empresa/cadastrar_categoria.html
@@ -1,3 +1,4 @@
+<main id="main-content">
 {% if perms.empresas.add_categoria %}
 {% load static %}
 {% load widget_tweaks %}
@@ -11,7 +12,7 @@
     <!-- 📝 Formulário AJAX -->
     <form method="post"
           class="ajax-form"
-          data-url="{% if form.instance.pk %}{% url 'empresas:cadastrar_categoria_avancada_new' pk=form.instance.pk %}{% else %}{% url 'empresas:cadastrar_categoria_avancada_new' %}{% endif %}"
+          data-url="{% if form.instance.pk %}{% url 'empresas:cadastrar_categoria_avancada' pk=form.instance.pk %}{% else %}{% url 'empresas:cadastrar_categoria_avancada' %}{% endif %}"
           autocomplete="off">
       {% csrf_token %}
 
@@ -36,3 +37,4 @@
   Você não tem permissão para acessar esta funcionalidade.
 </div>
 {% endif %}
+</main>
