--- a/templates/partials/nota_fiscal/entradas_nota.html
+++ b/templates/partials/nota_fiscal/entradas_nota.html
@@ -9,7 +9,7 @@
        data-entidade-singular="nota"
        data-entidade-plural="notas"
        data-url-editar="{% url 'nota_fiscal:editar_nota' 0 %}"
-       {# data-url-excluir="{% url 'nota_fiscal:excluir_nota_multiplo' %}" #}
+            data-url-excluir="{% url 'nota_fiscal:excluir_nota_multiplo' %}"
        data-seletor-checkbox=".checkbox-nota"
        class="d-none"></div>
   <div class="card shadow-sm">
