--- a/templates/base.html
+++ b/templates/base.html
@@ -22,16 +22,18 @@
 
   <!-- 🚀 Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  
 
   <!-- Select2 CSS (depois do Bootstrap) -->
   <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
   
   <!-- 🎨 Estilo Customizado -->
   <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
-
+  <link rel="stylesheet" href="{% static 'layout_switcher/css/switcher.css' %}">
 </head>
 <body class="{% if request.user.is_authenticated %}logged-in{% endif %}" id="page-body">
+  
+  {% include 'layout_switcher/navbar.html' %}
   
   <!-- ✅ Container para Toasts (mensagens instantâneas) -->
   <div class="toast-container position-fixed top-0 end-0 p-3" style="z-index: 11;">
@@ -219,6 +221,7 @@
             <div id="submenu-perfil" class="accordion-collapse collapse" data-bs-parent="#menuAccordion">
               <ul class="list-group list-group-flush">
                 <li><a href="{% url 'accounts:edit_profile' %}" class="list-group-item ajax-link">Editar Perfil</a></li>
+                {% include 'layout_switcher/control.html' %}
                 <li>
                   <form method="post" action="{% url 'accounts:logout' %}" class="px-3 py-1">
                     {% csrf_token %}
