--- a/layout_switcher/templates/layout_switcher/navbar.html
+++ b/layout_switcher/templates/layout_switcher/navbar.html
@@ -18,25 +18,35 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarConfiguracoes">
                         {% if perms.accounts.view_user %}
-                        <li class="dropdown-submenu">
-                            <a class="dropdown-item dropdown-toggle" href="#">👤 Usuários</a>
-                            <ul class="dropdown-menu">
-                                {% if perms.accounts.add_user %}
-                                <li><a class="dropdown-item ajax-link" href="{% url 'accounts:criar_usuario' %}">Novo</a></li>
-                                {% endif %}
-                                <li><a class="dropdown-item ajax-link" href="{% url 'accounts:lista_usuarios' %}">Lista</a></li>
-                            </ul>
+                        <li>
+                            <a class="dropdown-item d-flex justify-content-between" href="#submenu-usuarios-nav" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="submenu-usuarios-nav">
+                                👤 Usuários
+                                <span class="submenu-arrow">▶</span>
+                            </a>
+                            <div class="collapse" id="submenu-usuarios-nav">
+                                <ul class="list-unstyled ms-4">
+                                    {% if perms.accounts.add_user %}
+                                    <li><a class="dropdown-item ajax-link" href="{% url 'accounts:criar_usuario' %}">Novo</a></li>
+                                    {% endif %}
+                                    <li><a class="dropdown-item ajax-link" href="{% url 'accounts:lista_usuarios' %}">Lista</a></li>
+                                </ul>
+                            </div>
                         </li>
                         {% endif %}
                         {% if perms.auth.view_group %}
-                        <li class="dropdown-submenu">
-                            <a class="dropdown-item dropdown-toggle" href="#">🛡️ Grupos</a>
-                            <ul class="dropdown-menu">
-                                {% if perms.auth.add_group %}
-                                <li><a class="dropdown-item ajax-link" href="{% url 'accounts:cadastrar_grupo' %}">Novo</a></li>
-                                {% endif %}
-                                <li><a class="dropdown-item ajax-link" href="{% url 'accounts:lista_grupos' %}">Lista</a></li>
-                            </ul>
+                        <li>
+                            <a class="dropdown-item d-flex justify-content-between" href="#submenu-grupos-nav" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="submenu-grupos-nav">
+                                🛡️ Grupos
+                                <span class="submenu-arrow">▶</span>
+                            </a>
+                            <div class="collapse" id="submenu-grupos-nav">
+                                <ul class="list-unstyled ms-4">
+                                    {% if perms.auth.add_group %}
+                                    <li><a class="dropdown-item ajax-link" href="{% url 'accounts:cadastrar_grupo' %}">Novo</a></li>
+                                    {% endif %}
+                                    <li><a class="dropdown-item ajax-link" href="{% url 'accounts:lista_grupos' %}">Lista</a></li>
+                                </ul>
+                            </div>
                         </li>
                         {% endif %}
                     </ul>
@@ -98,12 +108,17 @@
                         <li><a class="dropdown-item ajax-link" href="{% url 'fiscal:cfop_list' %}">CFOPs</a></li>
                         <li><a class="dropdown-item ajax-link" href="{% url 'fiscal:natureza_operacao_list' %}">Naturezas de Operação</a></li>
                         <li><a class="dropdown-item ajax-link" href="{% url 'fiscal:import_fiscal_data' %}">Importar Dados Fiscais</a></li>
-                        <li class="dropdown-submenu">
-                            <a class="dropdown-item dropdown-toggle" href="#">⚙️ Configurações Fiscais</a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item ajax-link" href="#">Regras Tributárias (Futuro)</a></li>
-                                <li><a class="dropdown-item ajax-link" href="#">Status NF-e (Futuro)</a></li>
-                            </ul>
+                        <li>
+                            <a class="dropdown-item d-flex justify-content-between" href="#submenu-fiscal-nav" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="submenu-fiscal-nav">
+                                ⚙️ Configurações Fiscais
+                                <span class="submenu-arrow">▶</span>
+                            </a>
+                            <div class="collapse" id="submenu-fiscal-nav">
+                                <ul class="list-unstyled ms-4">
+                                    <li><a class="dropdown-item ajax-link" href="#">Regras Tributárias (Futuro)</a></li>
+                                    <li><a class="dropdown-item ajax-link" href="#">Status NF-e (Futuro)</a></li>
+                                </ul>
+                            </div>
                         </li>
                     </ul>
                 </li>
