--- a/templates/base.html
+++ b/templates/base.html
@@ -273,6 +273,9 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+  <!-- Scripts do Layout Switcher -->
+  <script src="{% static 'layout_switcher/js/layout_switcher.js' %}"></script>
+
   <!-- ✅ Select2 COM defer -->
   <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js" defer></script>
