--- a/templates/partials/nova_empresa/_lista_empresas_table.html
+++ b/templates/partials/nova_empresa/_lista_empresas_table.html
@@ -39,9 +39,9 @@
   <a href="{% url 'empresas:cadastrar_empresa_avancada' %}" class="btn btn-success ajax-link">
     <i class="bi bi-plus-circle"></i> Novo
   </a>
-  <button id="btn-editar" class="btn btn-primary" disabled>
+  <a id="btn-editar" class="btn btn-primary disabled" role="button">
     <i class="bi bi-pencil"></i> Editar
-  </button>
+  </a>
   <button id="btn-excluir" class="btn btn-danger" disabled>
     <i class="bi bi-trash"></i> Excluir
   </button>
