--- a/templates/partials/accounts/lista_usuarios.html
+++ b/templates/partials/accounts/lista_usuarios.html
@@ -6,7 +6,7 @@
        data-tela="lista_usuarios"
        data-entidade-singular="usuario"
        data-entidade-plural="usuarios"
-       data-url-editar="/accounts/usuarios/" {# A URL base para edição, o ID e /editar/ serão adicionados pelo JS #}
+       data-url-editar="{% url 'accounts:editar_usuario' 0 %}" {# A URL base para edição, o ID e /editar/ serão adicionados pelo JS #}
        data-url-excluir="{% url 'accounts:excluir_usuario_multiplo' %}"
        data-seletor-checkbox=".check-usuario">
 
@@ -25,9 +25,9 @@
                 <i class="bi bi-plus-lg me-1"></i> Novo Usuário
             </a>
             <div>
-                <button type="button" id="btn-editar" class="btn btn-outline-secondary me-2" disabled>
+                <a id="btn-editar" class="btn btn-outline-secondary me-2 disabled" role="button">
                     <i class="bi bi-pencil-square me-1"></i> Editar
-                </button>
+                </a>
                 <button type="button" id="btn-excluir" class="btn btn-outline-danger" disabled>
                     <i class="bi bi-trash me-1"></i> Excluir
                 </button>
